force-app/main/default/objects/nFORCE__Session__c/nFORCE__Session__c.object-meta.xml
<CustomObject>
    <description>This object is used to store temporary data to allow the user to enter an in-progress workflow.</description>
    <label>Session</label>
    <nameField>
        <label>Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>