force-app/main/default/objects/nFORCE__Session__c/fields/nFORCE__App_Resolved__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__App_Resolved__c</fullName>
    <description>This field is not required. It populates automatically. This field represents the Route and Group App name that the route group resolves to.</description>
    <formula>nFORCE__Route_Group__r.nFORCE__Group__r.nFORCE__App__c + &apos;.&apos; +  nFORCE__Route_Group__r.nFORCE__Route__r.nFORCE__App__c</formula>
    <label>App Resolved</label>
    <type>Text</type>
</CustomField>