force-app/main/default/objects/nFORCE__Session__c/fields/nFORCE__Context_Id__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Context_Id__c</fullName>
    <description>This field is not required. It populates automatically. This field represents the ID of the object in context for a session.</description>
    <label>Context ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>