force-app/main/default/objects/nFORCE__Session__c/fields/nFORCE__Context_Page__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Context_Page__c</fullName>
    <description>This field is not required. It populates automatically. This field represents the base page in context for a session.</description>
    <label>Context Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>