force-app/main/default/objects/nFORCE__Session__c/fields/nFORCE__Data__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Data__c</fullName>
    <description>This field is not required. It populates automatically. This is the string field used for data persistence.</description>
    <label>Session Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>