force-app/main/default/objects/nFORCE__Session__c/fields/nFORCE__Session_URL__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Session_URL__c</fullName>
    <description>This field is not required. It populates automatically. This field stores the link to allow a user to return to an existing session.</description>
    <formula>HYPERLINK(&quot;/apex/&quot; &amp;  nFORCE__Context_Page__c &amp; &quot;?sid=&quot; &amp; Id, &quot;Click here to open Session&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session URL</label>
    <type>Text</type>
</CustomField>