force-app/main/default/objects/nFORCE__Session__c/fields/nFORCE__Type__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Type__c</fullName>
    <description>--DEPRECATED-- Replaced by LLC_BI__Category__c - Product type session relates to</description>
    <label>-D Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>